# data-pipeline

./: .gitignore  README.md  main.py  pyproject.toml  settings.py
core/: __init__.py  batch_processor.py  dataset_io.py  execution_context.py  geometry_repair.py  helper_unique_values.py  ingest_loader.py  input_preparation.py  naming.py  optional_functions.py  output_manager.py  output_paths.py  output_quality.py  output_writer.py  pipeline.py  pipeline_operations.py  processing_errors.py  processing_events.py  processing_service.py  processing_steps.py  queue_runner.py  record_processor.py  reporting.py  rule_runtime.py  schema.py  text.py  utils.py
core/date/: __init__.py  date.py
core/ingest/: __init__.py  dataset_resolver.py  (+4 more)
input/: st_Ingest_parameter.xlsx  ~$st_Ingest_parameter.xlsx
projects/: __init__.py  configs.py  registry.py
readme/: README.md  rules.md
rules/: default.json
tests/: test_architecture_boundaries.py  test_compat_facades.py  test_end_to_end_real_profiles.py  test_output_manager.py  test_pipeline_operations.py  test_processing_context_factory.py  test_processing_pipeline_runner.py  test_processing_result.py  test_processing_service.py  test_project_configs.py  test_queue_group_state.py  test_queue_loader.py  test_queue_record_runner.py  test_queue_runner.py  test_queue_settings.py  test_queue_summary.py  test_real_input_schemas.py  test_record_processor.py  test_regional_bounds.py  test_rule_autofix_service.py  test_rule_engine.py  test_rule_profiles_integration.py  test_schema_step.py  test_tabular_schema.py  test_validation_session.py
(+359 files in other folders)
