[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "data-pipeline"
version = "0.1.0"
description = "Pipeline de validacao e transformacao de arquivos geoespaciais."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "geopandas>=1.1.3",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pyogrio>=0.12.1",
    "pyproj>=3.7.2",
    "pyarrow>=23.0.1",
    "shapely>=2.1.2",
]

[tool.setuptools]
py-modules = ["main", "settings"]

[tool.setuptools.packages.find]
include = ["core*", "projects*"]
